fix: resolve serialization issues with LocalDateTime in RoleEntity
- Add JacksonConfig to register JavaTimeModule for handling Java 8 date/time types.
- Create RoleDTO to simplify RoleEntity serialization in JWT claims.
- Update generateAccessToken method to use RoleDTO instead of RoleEntity.
- Ensure proper annotations and configurations in RoleEntity and Auditable classes.
- Refactor methods to improve clarity and ensure compatibility with Jackson serialization.

Resolves issues related to JSON serialization errors for LocalDateTime fields.